// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultFluentDarkTheme 1`] = `
{
  "colors": {
    "accentButtonBackground": "#0078d4",
    "actionLink": "#f3f2f1",
    "background": "#1b1a19",
    "bodyDivider": "#292827",
    "bodyFrameBackground": "#1b1a19",
    "bodyFrameDivider": "#292827",
    "bodyStandoutBackground": "#201f1e",
    "bodyText": "#f3f2f1",
    "bodyTextChecked": "#ffffff",
    "brandBackground": "#0086f0",
    "brandBackground2": "#092c47",
    "brandBackgroundDisabled": "#575757",
    "brandBackgroundHover": "#1890f1",
    "brandBackgroundPressed": "#1890f1",
    "brandBackgroundSelected": "#3aa0f3",
    "brandBackgroundStatic": "#0086f0",
    "brandForeground1": "#0086f0",
    "brandForeground1Disabled": "#c2c2c2",
    "brandForeground1Pressed": "#6cb8f6",
    "brandForeground2": "#092c47",
    "brandForegroundLink": "#043862",
    "brandForegroundLinkHover": "#092c47",
    "brandForegroundLinkPressed": "#0078d4",
    "brandForegroundLinkSelected": "#092c47",
    "brandStroke1": "#0086f0",
    "brandStroke2": "#004c87",
    "brandedBackground": "#2b88d8",
    "brandedDisabledBorder": "#252423",
    "brandedFocusedSecondaryContent": "#201f1e",
    "brandedHoveredSecondaryContent": "#201f1e",
    "brandedPressedSecondaryContent": "#201f1e",
    "brandedSecondaryContent": "#201f1e",
    "buttonBackground": "#252423",
    "buttonBackgroundChecked": "#484644",
    "buttonBackgroundDisabled": "#252423",
    "buttonBackgroundHovered": "#292827",
    "buttonBackgroundPressed": "#292827",
    "buttonBorder": "#979693",
    "buttonBorderDisabled": "#252423",
    "buttonBorderFocused": "#979693",
    "buttonText": "#ffffff",
    "buttonTextChecked": "#faf9f8",
    "buttonTextDisabled": "#797775",
    "buttonTextHovered": "#f3f2f1",
    "buttonTextPressed": "#faf9f8",
    "checkboxBackground": "#2b88d8",
    "checkboxBackgroundDisabled": "#252423",
    "checkboxBorderColor": "#979693",
    "checkmarkColor": "#1b1a19",
    "compoundBrandBackground1": "#0086f0",
    "compoundBrandBackground1Hover": "#1890f1",
    "compoundBrandBackground1Pressed": "#6cb8f6",
    "compoundBrandForeground1": "#043862",
    "compoundBrandForeground1Hover": "#092c47",
    "compoundBrandForeground1Pressed": "#0078d4",
    "compoundBrandStroke1": "#0086f0",
    "compoundBrandStroke1Hover": "#1890f1",
    "compoundBrandStroke1Pressed": "#6cb8f6",
    "dangerBackground1": "#3f1011",
    "dangerBackground2": "#751d1f",
    "dangerBackground3": "#d13438",
    "dangerBorder1": "#d13438",
    "dangerBorder2": "#dc5e62",
    "dangerBorderActive": "#e37d80",
    "dangerForeground1": "#e37d80",
    "dangerForeground2": "#f1bbbc",
    "dangerForeground3": "#e37d80",
    "dangerForegroundInverted": "#d13438",
    "defaultBackground": "#252423",
    "defaultBorder": "#979693",
    "defaultCheckedBackground": "#484644",
    "defaultCheckedContent": "#faf9f8",
    "defaultCheckedHoveredBackground": "#292827",
    "defaultCheckedHoveredContent": "#f3f2f1",
    "defaultContent": "#ffffff",
    "defaultDisabledBackground": "#252423",
    "defaultDisabledBorder": "#252423",
    "defaultDisabledContent": "#797775",
    "defaultDisabledIcon": "#797775",
    "defaultFocusedBackground": "#292827",
    "defaultFocusedBorder": "#979693",
    "defaultFocusedContent": "#f3f2f1",
    "defaultFocusedIcon": "#f3f2f1",
    "defaultHoveredBackground": "#292827",
    "defaultHoveredBorder": "#979693",
    "defaultHoveredContent": "#f3f2f1",
    "defaultHoveredIcon": "#f3f2f1",
    "defaultHoveredSecondaryContent": "#797775",
    "defaultIcon": "#ffffff",
    "defaultPressedBackground": "#292827",
    "defaultPressedBorder": "#979693",
    "defaultPressedContent": "#faf9f8",
    "defaultPressedIcon": "#faf9f8",
    "defaultPressedSecondaryContent": "#797775",
    "disabledBackground": "#323130",
    "disabledBodyText": "#797775",
    "disabledText": "#797775",
    "errorText": "#ff5f5f",
    "focusBorder": "#a19f9d",
    "ghostBackground": "#1b1a19",
    "ghostBorder": "#1b1a19",
    "ghostCheckedBackground": "#292827",
    "ghostCheckedContent": "#ffffff",
    "ghostCheckedHoveredBackground": "#252423",
    "ghostCheckedHoveredBorder": "#faf9f8",
    "ghostCheckedHoveredContent": "#faf9f8",
    "ghostContent": "#f3f2f1",
    "ghostDisabledBackground": "#1b1a19",
    "ghostDisabledBorder": "#1b1a19",
    "ghostDisabledContent": "#797775",
    "ghostDisabledIcon": "#797775",
    "ghostFocusedBackground": "#252423",
    "ghostFocusedBorder": "#979693",
    "ghostFocusedContent": "#faf9f8",
    "ghostFocusedIcon": "#faf9f8",
    "ghostFocusedSecondaryContent": "#a19f9d",
    "ghostHoveredBackground": "#252423",
    "ghostHoveredBorder": "#252423",
    "ghostHoveredContent": "#faf9f8",
    "ghostHoveredIcon": "#faf9f8",
    "ghostHoveredSecondaryContent": "#a19f9d",
    "ghostIcon": "#f3f2f1",
    "ghostPressedBackground": "#292827",
    "ghostPressedBorder": "#292827",
    "ghostPressedContent": "#faf9f8",
    "ghostPressedIcon": "#faf9f8",
    "ghostPressedSecondaryContent": "#a19f9d",
    "ghostSecondaryContent": "#a19f9d",
    "inputBackground": "#1b1a19",
    "inputBorder": "#797775",
    "inputFocusBorderAlt": "#2b88d8",
    "inputPlaceholderText": "#a19f9d",
    "inputText": "#f3f2f1",
    "link": "#2b88d8",
    "linkHovered": "#82c7ff",
    "linkPressed": "#deecf9",
    "listHeaderBackgroundHovered": "#252423",
    "listHeaderBackgroundPressed": "#292827",
    "menuBackground": "#252423",
    "menuDivider": "#484644",
    "menuIcon": "#c7e0f4",
    "menuItemBackgroundHovered": "#323130",
    "menuItemBackgroundPressed": "#3b3a39",
    "menuItemText": "#f3f2f1",
    "menuItemTextHovered": "#faf9f8",
    "neutralBackground1": "#1f1f1f",
    "neutralBackground1Hover": "#292929",
    "neutralBackground1Pressed": "#474747",
    "neutralBackground1Selected": "#333333",
    "neutralBackground2": "#292929",
    "neutralBackground2Hover": "#333333",
    "neutralBackground2Pressed": "#525252",
    "neutralBackground2Selected": "#3d3d3d",
    "neutralBackground3": "#575757",
    "neutralBackground3Hover": "#616161",
    "neutralBackground3Pressed": "#808080",
    "neutralBackground3Selected": "#707070",
    "neutralBackground4": "#141414",
    "neutralBackground4Hover": "#1f1f1f",
    "neutralBackground4Pressed": "#3d3d3d",
    "neutralBackground4Selected": "#2e2e2e",
    "neutralBackground5": "#0a0a0a",
    "neutralBackground5Hover": "#141414",
    "neutralBackground5Pressed": "#333333",
    "neutralBackground5Selected": "#242424",
    "neutralBackground6": "#333333",
    "neutralBackgroundDisabled": "#575757",
    "neutralBackgroundInverted": "#ffffff",
    "neutralForeground1": "#ffffff",
    "neutralForeground1Hover": "#ffffff",
    "neutralForeground1Pressed": "#ffffff",
    "neutralForeground1Selected": "#ffffff",
    "neutralForeground2": "#d6d6d6",
    "neutralForeground2BrandHover": "#092c47",
    "neutralForeground2BrandPressed": "#0078d4",
    "neutralForeground2BrandSelected": "#092c47",
    "neutralForeground2Hover": "#ffffff",
    "neutralForeground2Pressed": "#ffffff",
    "neutralForeground2Selected": "#ffffff",
    "neutralForeground3": "#adadad",
    "neutralForeground3BrandHover": "#092c47",
    "neutralForeground3BrandPressed": "#0078d4",
    "neutralForeground3BrandSelected": "#092c47",
    "neutralForeground3Hover": "#d6d6d6",
    "neutralForeground3Pressed": "#d6d6d6",
    "neutralForeground3Selected": "#d6d6d6",
    "neutralForeground4": "#999999",
    "neutralForegroundDisabled": "#b8b8b8",
    "neutralForegroundInverted": "#ffffff",
    "neutralForegroundInvertedLink": "#292929",
    "neutralForegroundInvertedLinkHover": "#292929",
    "neutralForegroundInvertedLinkPressed": "#292929",
    "neutralForegroundInvertedLinkSelected": "#292929",
    "neutralForegroundOnBrand": "#ffffff",
    "neutralForegroundOnBrandHover": "#ffffff",
    "neutralForegroundOnBrandPressed": "#ffffff",
    "neutralForegroundOnBrandSelected": "#ffffff",
    "neutralStencil1": "#333333",
    "neutralStencil2": "#575757",
    "neutralStroke1": "#666666",
    "neutralStroke1Hover": "#757575",
    "neutralStroke1Pressed": "#6b6b6b",
    "neutralStroke1Selected": "#707070",
    "neutralStroke2": "#575757",
    "neutralStroke3": "#666666",
    "neutralStrokeAccessible": "#adadad",
    "neutralStrokeAccessibleHover": "#bdbdbd",
    "neutralStrokeAccessiblePressed": "#b3b3b3",
    "neutralStrokeAccessibleSelected": "#0086f0",
    "neutralStrokeDisabled": "#525252",
    "outofofficeBackground1": "#3a1136",
    "outofofficeBackground2": "#6d2064",
    "outofofficeBackground3": "#c239b3",
    "outofofficeBorder1": "#c239b3",
    "outofofficeBorder2": "#d161c4",
    "outofofficeBorderActive": "#da7ed0",
    "outofofficeForeground1": "#da7ed0",
    "outofofficeForeground2": "#edbbe7",
    "outofofficeForeground3": "#d161c4",
    "personaActivityGlow": "#2b88d8",
    "personaActivityRing": "#1b1a19",
    "primaryButtonBackground": "#2b88d8",
    "primaryButtonBackgroundDisabled": "#252423",
    "primaryButtonBackgroundHovered": "#c7e0f4",
    "primaryButtonBackgroundPressed": "#deecf9",
    "primaryButtonBorder": "transparent",
    "primaryButtonBorderFocused": "transparent",
    "primaryButtonText": "#1b1a19",
    "primaryButtonTextDisabled": "#3b3a39",
    "primaryButtonTextHovered": "#1b1a19",
    "primaryButtonTextPressed": "#1b1a19",
    "severeBackground1": "#411200",
    "severeBackground2": "#7a2101",
    "severeBackground3": "#da3b01",
    "severeBorder1": "#da3b01",
    "severeBorder2": "#e9835e",
    "severeBorderActive": "#e9835e",
    "severeForeground1": "#e9835e",
    "severeForeground2": "#f4bfab",
    "severeForeground3": "#e9835e",
    "strokeFocus1": "#000000",
    "strokeFocus2": "#ffffff",
    "subText": "#a19f9d",
    "subtleBackground": "#00000000",
    "subtleBackgroundHover": "#3d3d3d",
    "subtleBackgroundPressed": "#1f1f1f",
    "subtleBackgroundSelected": "#383838",
    "successBackground1": "#052505",
    "successBackground2": "#094509",
    "successBackground3": "#107c10",
    "successBorder1": "#107c10",
    "successBorder2": "#9fd89f",
    "successBorderActive": "#54b054",
    "successForeground1": "#54b054",
    "successForeground2": "#9fd89f",
    "successForeground3": "#9fd89f",
    "successForegroundInverted": "#107c10",
    "transparentBackground": "#00000000",
    "transparentBackgroundHover": "#00000000",
    "transparentBackgroundPressed": "#00000000",
    "transparentBackgroundSelected": "#00000000",
    "transparentStroke": "#00000000",
    "transparentStrokeDisabled": "#00000000",
    "transparentStrokeInteractive": "#00000000",
    "variantBorder": "#292827",
    "warningBackground1": "#4c4400",
    "warningBackground2": "#817400",
    "warningBackground3": "#fde300",
    "warningBorder1": "#fde300",
    "warningBorder2": "#fdea3d",
    "warningBorderActive": "#feee66",
    "warningForeground1": "#feee66",
    "warningForeground2": "#fef7b2",
    "warningForeground3": "#fdea3d",
    "warningForegroundInverted": "#817400",
  },
  "components": {},
  "host": {
    "appearance": "dark",
  },
  "shadows": {
    "shadow16": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000047",
        "x": 0,
        "y": 8,
      },
    },
    "shadow16brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000040",
        "x": 0,
        "y": 8,
      },
    },
    "shadow2": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000047",
        "x": 0,
        "y": 1,
      },
    },
    "shadow28": {
      "ambient": {
        "blur": 8,
        "color": "#00000066",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#0000007a",
        "x": 0,
        "y": 14,
      },
    },
    "shadow28brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#00000040",
        "x": 0,
        "y": 14,
      },
    },
    "shadow2brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000040",
        "x": 0,
        "y": 1,
      },
    },
    "shadow4": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000047",
        "x": 0,
        "y": 2,
      },
    },
    "shadow4brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000040",
        "x": 0,
        "y": 2,
      },
    },
    "shadow64": {
      "ambient": {
        "blur": 8,
        "color": "#00000066",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#0000007a",
        "x": 0,
        "y": 32,
      },
    },
    "shadow64brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#00000040",
        "x": 0,
        "y": 32,
      },
    },
    "shadow8": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000047",
        "x": 0,
        "y": 4,
      },
    },
    "shadow8brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000040",
        "x": 0,
        "y": 4,
      },
    },
  },
  "spacing": {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
  "typography": {
    "families": {
      "cursive": "System",
      "monospace": "System",
      "numeric": "System",
      "primary": "System",
      "sansSerif": "System",
      "secondary": "System",
      "serif": "System",
    },
    "sizes": {
      "body": 14,
      "caption": 10,
      "header": 20,
      "hero": 28,
      "heroLarge": 40,
      "secondary": 12,
      "subheader": 16,
    },
    "variants": {
      "body1": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "body1Strong": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "body2": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "body2Strong": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodySemibold": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodyStandard": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "caption1": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "caption1Strong": {
        "face": "primary",
        "size": "caption",
        "weight": "semiBold",
      },
      "captionStandard": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "display": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "headerSemibold": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "headerStandard": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "heroLargeSemibold": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "heroLargeStandard": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "heroSemibold": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
      "heroStandard": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "largeTitle": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "secondarySemibold": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "secondaryStandard": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "subheaderSemibold": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "subheaderStandard": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle1": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "subtitle1Strong": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "subtitle2": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle2Strong": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "title1": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "title1Strong": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
    },
    "weights": {
      "regular": "400",
      "semiBold": "600",
    },
  },
}
`;

exports[`defaultFluentHighConstrastTheme 1`] = `
{
  "colors": {
    "accentButtonBackground": "#000000",
    "actionLink": "#ffff00",
    "background": "#000000",
    "bodyDivider": "#ffffff",
    "bodyFrameBackground": "#000000",
    "bodyFrameDivider": "#000000",
    "bodyStandoutBackground": "#000000",
    "bodyText": "#ffffff",
    "bodyTextChecked": "#000000",
    "brandBackground": "#0078d4",
    "brandBackground2": "#eff6fc",
    "brandBackgroundDisabled": "#d1d1d1",
    "brandBackgroundHover": "#106ebe",
    "brandBackgroundPressed": "#106ebe",
    "brandBackgroundSelected": "#005a9e",
    "brandBackgroundStatic": "#0078d4",
    "brandForeground1": "#0078d4",
    "brandForeground1Disabled": "#757575",
    "brandForeground1Pressed": "#004578",
    "brandForeground2": "#106ebe",
    "brandForegroundLink": "#0078d4",
    "brandForegroundLinkHover": "#106ebe",
    "brandForegroundLinkPressed": "#004578",
    "brandForegroundLinkSelected": "#005a9e",
    "brandStroke1": "#0078d4",
    "brandStroke2": "#c7e0f4",
    "brandedBackground": "#000000",
    "brandedDisabledBorder": "#3ff23f",
    "brandedFocusedSecondaryContent": "#ffffff",
    "brandedHoveredSecondaryContent": "#000000",
    "brandedPressedSecondaryContent": "#000000",
    "brandedSecondaryContent": "#ffffff",
    "buttonBackground": "#000000",
    "buttonBackgroundChecked": "#1aebff",
    "buttonBackgroundDisabled": "#000000",
    "buttonBackgroundHovered": "#1aebff",
    "buttonBackgroundPressed": "#1aebff",
    "buttonBorder": "#ffffff",
    "buttonBorderDisabled": "#3ff23f",
    "buttonBorderFocused": "#ffffff",
    "buttonText": "#ffffff",
    "buttonTextChecked": "#000000",
    "buttonTextDisabled": "#3ff23f",
    "buttonTextHovered": "#000000",
    "buttonTextPressed": "#000000",
    "checkboxBackground": "#000000",
    "checkboxBackgroundDisabled": "#000000",
    "checkboxBorderColor": "#ffffff",
    "checkmarkColor": "#ffffff",
    "compoundBrandBackground1": "#0078d4",
    "compoundBrandBackground1Hover": "#106ebe",
    "compoundBrandBackground1Pressed": "#004578",
    "compoundBrandForeground1": "#0078d4",
    "compoundBrandForeground1Hover": "#106ebe",
    "compoundBrandForeground1Pressed": "#004578",
    "compoundBrandStroke1": "#0078d4",
    "compoundBrandStroke1Hover": "#106ebe",
    "compoundBrandStroke1Pressed": "#004578",
    "dangerBackground1": "#fdf6f6",
    "dangerBackground2": "#f1bbbc",
    "dangerBackground3": "#d13438",
    "dangerBorder1": "#f1bbbc",
    "dangerBorder2": "#d13438",
    "dangerBorderActive": "#d13438",
    "dangerForeground1": "#bc2f32",
    "dangerForeground2": "#751d1f",
    "dangerForeground3": "#d13438",
    "dangerForegroundInverted": "#dc5e62",
    "defaultBackground": "#000000",
    "defaultBorder": "#ffffff",
    "defaultCheckedBackground": "#1aebff",
    "defaultCheckedContent": "#000000",
    "defaultCheckedHoveredBackground": "#1aebff",
    "defaultCheckedHoveredContent": "#000000",
    "defaultContent": "#ffffff",
    "defaultDisabledBackground": "#000000",
    "defaultDisabledBorder": "#3ff23f",
    "defaultDisabledContent": "#3ff23f",
    "defaultDisabledIcon": "#3ff23f",
    "defaultFocusedBackground": "#000000",
    "defaultFocusedBorder": "#ffffff",
    "defaultFocusedContent": "#ffffff",
    "defaultFocusedIcon": "#ffffff",
    "defaultHoveredBackground": "#1aebff",
    "defaultHoveredBorder": "#1aebff",
    "defaultHoveredContent": "#000000",
    "defaultHoveredIcon": "#000000",
    "defaultHoveredSecondaryContent": "#000000",
    "defaultIcon": "#ffffff",
    "defaultPressedBackground": "#1aebff",
    "defaultPressedBorder": "#1aebff",
    "defaultPressedContent": "#000000",
    "defaultPressedIcon": "#000000",
    "defaultPressedSecondaryContent": "#000000",
    "disabledBackground": "#000000",
    "disabledBodyText": "#3ff23f",
    "disabledText": "#3ff23f",
    "errorText": "#ffffff",
    "focusBorder": "#ffffff",
    "ghostBackground": "#000000",
    "ghostBorder": "#000000",
    "ghostCheckedBackground": "#1aebff",
    "ghostCheckedContent": "#000000",
    "ghostCheckedHoveredBackground": "#1aebff",
    "ghostCheckedHoveredBorder": "#000000",
    "ghostCheckedHoveredContent": "#000000",
    "ghostContent": "#ffffff",
    "ghostDisabledBackground": "#000000",
    "ghostDisabledBorder": "#000000",
    "ghostDisabledContent": "#3ff23f",
    "ghostDisabledIcon": "#3ff23f",
    "ghostFocusedBackground": "#000000",
    "ghostFocusedBorder": "#ffffff",
    "ghostFocusedContent": "#ffffff",
    "ghostFocusedIcon": "#ffffff",
    "ghostFocusedSecondaryContent": "#ffffff",
    "ghostHoveredBackground": "#1aebff",
    "ghostHoveredBorder": "#1aebff",
    "ghostHoveredContent": "#000000",
    "ghostHoveredIcon": "#000000",
    "ghostHoveredSecondaryContent": "#000000",
    "ghostIcon": "#ffffff",
    "ghostPressedBackground": "#1aebff",
    "ghostPressedBorder": "#1aebff",
    "ghostPressedContent": "#000000",
    "ghostPressedIcon": "#000000",
    "ghostPressedSecondaryContent": "#000000",
    "ghostSecondaryContent": "#ffffff",
    "inputBackground": "#000000",
    "inputBorder": "#ffffff",
    "inputFocusBorderAlt": "#ffffff",
    "inputPlaceholderText": "#ffffff",
    "inputText": "#ffffff",
    "link": "#ffff00",
    "linkHovered": "#ffffff",
    "linkPressed": "#ffffff",
    "listHeaderBackgroundHovered": "#1aebff",
    "listHeaderBackgroundPressed": "#1aebff",
    "menuBackground": "#000000",
    "menuDivider": "#ffffff",
    "menuIcon": "#ffffff",
    "menuItemBackgroundHovered": "#1aebff",
    "menuItemBackgroundPressed": "#1aebff",
    "menuItemText": "#ffffff",
    "menuItemTextHovered": "#000000",
    "neutralBackground1": "#ffffff",
    "neutralBackground1Hover": "#f5f5f5",
    "neutralBackground1Pressed": "#ebebeb",
    "neutralBackground1Selected": "#ebebeb",
    "neutralBackground2": "#ffffff",
    "neutralBackground2Hover": "#f0f0f0",
    "neutralBackground2Pressed": "#ebebeb",
    "neutralBackground2Selected": "#e6e6e6",
    "neutralBackground3": "#f5f5f5",
    "neutralBackground3Hover": "#ebebeb",
    "neutralBackground3Pressed": "#d6d6d6",
    "neutralBackground3Selected": "#e0e0e0",
    "neutralBackground4": "#f0f0f0",
    "neutralBackground4Hover": "#fafafa",
    "neutralBackground4Pressed": "#f5f5f5",
    "neutralBackground4Selected": "#ffffff",
    "neutralBackground5": "#ebebeb",
    "neutralBackground5Hover": "#f5f5f5",
    "neutralBackground5Pressed": "#f0f0f0",
    "neutralBackground5Selected": "#fafafa",
    "neutralBackground6": "#e6e6e6",
    "neutralBackgroundDisabled": "#f0f0f0",
    "neutralBackgroundInverted": "#616161",
    "neutralForeground1": "#000000",
    "neutralForeground1Hover": "#000000",
    "neutralForeground1Pressed": "#000000",
    "neutralForeground1Selected": "#000000",
    "neutralForeground2": "#000000",
    "neutralForeground2BrandHover": "#106ebe",
    "neutralForeground2BrandPressed": "#004578",
    "neutralForeground2BrandSelected": "#005a9e",
    "neutralForeground2Hover": "#242424",
    "neutralForeground2Pressed": "#242424",
    "neutralForeground2Selected": "#242424",
    "neutralForeground3": "#000000",
    "neutralForeground3BrandHover": "#106ebe",
    "neutralForeground3BrandPressed": "#004578",
    "neutralForeground3BrandSelected": "#005a9e",
    "neutralForeground3Hover": "#424242",
    "neutralForeground3Pressed": "#424242",
    "neutralForeground3Selected": "#424242",
    "neutralForeground4": "#424242",
    "neutralForegroundDisabled": "#757575",
    "neutralForegroundInverted": "#ffffff",
    "neutralForegroundInvertedLink": "#ffffff",
    "neutralForegroundInvertedLinkHover": "#ffffff",
    "neutralForegroundInvertedLinkPressed": "#ffffff",
    "neutralForegroundInvertedLinkSelected": "#ffffff",
    "neutralForegroundOnBrand": "#ffffff",
    "neutralForegroundOnBrandHover": "#ffffff",
    "neutralForegroundOnBrandPressed": "#ffffff",
    "neutralForegroundOnBrandSelected": "#ffffff",
    "neutralStencil1": "#e6e6e6",
    "neutralStencil2": "#fafafa",
    "neutralStroke1": "#616161",
    "neutralStroke1Hover": "#c7c7c7",
    "neutralStroke1Pressed": "#b3b3b3",
    "neutralStroke1Selected": "#bdbdbd",
    "neutralStroke2": "#000000",
    "neutralStroke3": "#616161",
    "neutralStrokeAccessible": "#242424",
    "neutralStrokeAccessibleHover": "#575757",
    "neutralStrokeAccessiblePressed": "#4d4d4d",
    "neutralStrokeAccessibleSelected": "#0078d4",
    "neutralStrokeDisabled": "#e0e0e0",
    "outofofficeBackground1": "#fdf5fc",
    "outofofficeBackground2": "#edbbe7",
    "outofofficeBackground3": "#c239b3",
    "outofofficeBorder1": "#edbbe7",
    "outofofficeBorder2": "#c239b3",
    "outofofficeBorderActive": "#c239b3",
    "outofofficeForeground1": "#af33a1",
    "outofofficeForeground2": "#6d2064",
    "outofofficeForeground3": "#c239b3",
    "personaActivityGlow": "transparent",
    "personaActivityRing": "#ffffff",
    "primaryButtonBackground": "#000000",
    "primaryButtonBackgroundDisabled": "#000000",
    "primaryButtonBackgroundHovered": "#1aebff",
    "primaryButtonBackgroundPressed": "#1aebff",
    "primaryButtonBorder": "#ffffff",
    "primaryButtonBorderFocused": "#ffffff",
    "primaryButtonText": "#ffffff",
    "primaryButtonTextDisabled": "#3ff23f",
    "primaryButtonTextHovered": "#000000",
    "primaryButtonTextPressed": "#000000",
    "severeBackground1": "#fdf6f3",
    "severeBackground2": "#f4bfab",
    "severeBackground3": "#da3b01",
    "severeBorder1": "#f4bfab",
    "severeBorder2": "#da3b01",
    "severeBorderActive": "#da3b01",
    "severeForeground1": "#c43501",
    "severeForeground2": "#7a2101",
    "severeForeground3": "#da3b01",
    "strokeFocus1": "#ffffff",
    "strokeFocus2": "#000000",
    "subText": "#ffffff",
    "subtleBackground": "#00000000",
    "subtleBackgroundHover": "#f5f5f5",
    "subtleBackgroundPressed": "#e0e0e0",
    "subtleBackgroundSelected": "#ebebeb",
    "successBackground1": "#f1faf1",
    "successBackground2": "#9fd89f",
    "successBackground3": "#107c10",
    "successBorder1": "#9fd89f",
    "successBorder2": "#107c10",
    "successBorderActive": "#107c10",
    "successForeground1": "#0e700e",
    "successForeground2": "#094509",
    "successForeground3": "#107c10",
    "successForegroundInverted": "#359b35",
    "transparentBackground": "#00000000",
    "transparentBackgroundHover": "#00000000",
    "transparentBackgroundPressed": "#00000000",
    "transparentBackgroundSelected": "#00000000",
    "transparentStroke": "#000000",
    "transparentStrokeDisabled": "#bdbdbd",
    "transparentStrokeInteractive": "#666666",
    "variantBorder": "#ffffff",
    "warningBackground1": "#fffef5",
    "warningBackground2": "#fef7b2",
    "warningBackground3": "#fde300",
    "warningBorder1": "#fef7b2",
    "warningBorder2": "#fde300",
    "warningBorderActive": "#fde300",
    "warningForeground1": "#817400",
    "warningForeground2": "#817400",
    "warningForeground3": "#fde300",
    "warningForegroundInverted": "#fef7b2",
  },
  "components": {},
  "host": {
    "appearance": "highContrast",
  },
  "shadows": {
    "shadow16": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000047",
        "x": 0,
        "y": 8,
      },
    },
    "shadow16brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000040",
        "x": 0,
        "y": 8,
      },
    },
    "shadow2": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000047",
        "x": 0,
        "y": 1,
      },
    },
    "shadow28": {
      "ambient": {
        "blur": 8,
        "color": "#00000066",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#0000007a",
        "x": 0,
        "y": 14,
      },
    },
    "shadow28brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#00000040",
        "x": 0,
        "y": 14,
      },
    },
    "shadow2brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000040",
        "x": 0,
        "y": 1,
      },
    },
    "shadow4": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000047",
        "x": 0,
        "y": 2,
      },
    },
    "shadow4brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000040",
        "x": 0,
        "y": 2,
      },
    },
    "shadow64": {
      "ambient": {
        "blur": 8,
        "color": "#00000066",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#0000007a",
        "x": 0,
        "y": 32,
      },
    },
    "shadow64brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#00000040",
        "x": 0,
        "y": 32,
      },
    },
    "shadow8": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000047",
        "x": 0,
        "y": 4,
      },
    },
    "shadow8brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000040",
        "x": 0,
        "y": 4,
      },
    },
  },
  "spacing": {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
  "typography": {
    "families": {
      "cursive": "System",
      "monospace": "System",
      "numeric": "System",
      "primary": "System",
      "sansSerif": "System",
      "secondary": "System",
      "serif": "System",
    },
    "sizes": {
      "body": 14,
      "caption": 10,
      "header": 20,
      "hero": 28,
      "heroLarge": 40,
      "secondary": 12,
      "subheader": 16,
    },
    "variants": {
      "body1": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "body1Strong": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "body2": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "body2Strong": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodySemibold": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodyStandard": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "caption1": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "caption1Strong": {
        "face": "primary",
        "size": "caption",
        "weight": "semiBold",
      },
      "captionStandard": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "display": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "headerSemibold": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "headerStandard": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "heroLargeSemibold": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "heroLargeStandard": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "heroSemibold": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
      "heroStandard": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "largeTitle": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "secondarySemibold": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "secondaryStandard": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "subheaderSemibold": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "subheaderStandard": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle1": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "subtitle1Strong": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "subtitle2": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle2Strong": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "title1": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "title1Strong": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
    },
    "weights": {
      "regular": "400",
      "semiBold": "600",
    },
  },
}
`;

exports[`defaultFluentTheme 1`] = `
{
  "colors": {
    "accentButtonBackground": "#0078d4",
    "actionLink": "#323130",
    "background": "#ffffff",
    "bodyDivider": "#edebe9",
    "bodyFrameBackground": "#ffffff",
    "bodyFrameDivider": "#edebe9",
    "bodyStandoutBackground": "#faf9f8",
    "bodyText": "#323130",
    "bodyTextChecked": "#000000",
    "brandBackground": "#0078d4",
    "brandBackground2": "#eff6fc",
    "brandBackgroundDisabled": "#d1d1d1",
    "brandBackgroundHover": "#106ebe",
    "brandBackgroundPressed": "#106ebe",
    "brandBackgroundSelected": "#005a9e",
    "brandBackgroundStatic": "#0078d4",
    "brandForeground1": "#0078d4",
    "brandForeground1Disabled": "#757575",
    "brandForeground1Pressed": "#004578",
    "brandForeground2": "#106ebe",
    "brandForegroundLink": "#0078d4",
    "brandForegroundLinkHover": "#106ebe",
    "brandForegroundLinkPressed": "#004578",
    "brandForegroundLinkSelected": "#005a9e",
    "brandStroke1": "#0078d4",
    "brandStroke2": "#c7e0f4",
    "brandedBackground": "#0078d4",
    "brandedDisabledBorder": "#f3f2f1",
    "brandedFocusedSecondaryContent": "#faf9f8",
    "brandedHoveredSecondaryContent": "#faf9f8",
    "brandedPressedSecondaryContent": "#faf9f8",
    "brandedSecondaryContent": "#faf9f8",
    "buttonBackground": "#f3f2f1",
    "buttonBackgroundChecked": "#c8c6c4",
    "buttonBackgroundDisabled": "#f3f2f1",
    "buttonBackgroundHovered": "#edebe9",
    "buttonBackgroundPressed": "#edebe9",
    "buttonBorder": "#8a8886",
    "buttonBorderDisabled": "#f3f2f1",
    "buttonBorderFocused": "#8a8886",
    "buttonText": "#323130",
    "buttonTextChecked": "#201f1e",
    "buttonTextDisabled": "#a19f9d",
    "buttonTextHovered": "#201f1e",
    "buttonTextPressed": "#201f1e",
    "checkboxBackground": "#0078d4",
    "checkboxBackgroundDisabled": "#f3f2f1",
    "checkboxBorderColor": "#8a8886",
    "checkmarkColor": "#ffffff",
    "compoundBrandBackground1": "#0078d4",
    "compoundBrandBackground1Hover": "#106ebe",
    "compoundBrandBackground1Pressed": "#004578",
    "compoundBrandForeground1": "#0078d4",
    "compoundBrandForeground1Hover": "#106ebe",
    "compoundBrandForeground1Pressed": "#004578",
    "compoundBrandStroke1": "#0078d4",
    "compoundBrandStroke1Hover": "#106ebe",
    "compoundBrandStroke1Pressed": "#004578",
    "dangerBackground1": "#fdf6f6",
    "dangerBackground2": "#f1bbbc",
    "dangerBackground3": "#d13438",
    "dangerBorder1": "#f1bbbc",
    "dangerBorder2": "#d13438",
    "dangerBorderActive": "#d13438",
    "dangerForeground1": "#bc2f32",
    "dangerForeground2": "#751d1f",
    "dangerForeground3": "#d13438",
    "dangerForegroundInverted": "#dc5e62",
    "defaultBackground": "#f3f2f1",
    "defaultBorder": "#8a8886",
    "defaultCheckedBackground": "#c8c6c4",
    "defaultCheckedContent": "#201f1e",
    "defaultCheckedHoveredBackground": "#edebe9",
    "defaultCheckedHoveredContent": "#201f1e",
    "defaultContent": "#323130",
    "defaultDisabledBackground": "#f3f2f1",
    "defaultDisabledBorder": "#f3f2f1",
    "defaultDisabledContent": "#a19f9d",
    "defaultDisabledIcon": "#a19f9d",
    "defaultFocusedBackground": "#edebe9",
    "defaultFocusedBorder": "#8a8886",
    "defaultFocusedContent": "#201f1e",
    "defaultFocusedIcon": "#201f1e",
    "defaultHoveredBackground": "#edebe9",
    "defaultHoveredBorder": "#8a8886",
    "defaultHoveredContent": "#201f1e",
    "defaultHoveredIcon": "#201f1e",
    "defaultHoveredSecondaryContent": "#a19f9d",
    "defaultIcon": "#323130",
    "defaultPressedBackground": "#edebe9",
    "defaultPressedBorder": "#8a8886",
    "defaultPressedContent": "#201f1e",
    "defaultPressedIcon": "#201f1e",
    "defaultPressedSecondaryContent": "#a19f9d",
    "disabledBackground": "#f3f2f1",
    "disabledBodyText": "#a19f9d",
    "disabledText": "#a19f9d",
    "errorText": "#a4262c",
    "focusBorder": "#605e5c",
    "ghostBackground": "#ffffff",
    "ghostBorder": "#ffffff",
    "ghostCheckedBackground": "#edebe9",
    "ghostCheckedContent": "#000000",
    "ghostCheckedHoveredBackground": "#f3f2f1",
    "ghostCheckedHoveredBorder": "#201f1e",
    "ghostCheckedHoveredContent": "#201f1e",
    "ghostContent": "#323130",
    "ghostDisabledBackground": "#ffffff",
    "ghostDisabledBorder": "#ffffff",
    "ghostDisabledContent": "#a19f9d",
    "ghostDisabledIcon": "#a19f9d",
    "ghostFocusedBackground": "#f3f2f1",
    "ghostFocusedBorder": "#8a8886",
    "ghostFocusedContent": "#201f1e",
    "ghostFocusedIcon": "#201f1e",
    "ghostFocusedSecondaryContent": "#605e5c",
    "ghostHoveredBackground": "#f3f2f1",
    "ghostHoveredBorder": "#f3f2f1",
    "ghostHoveredContent": "#201f1e",
    "ghostHoveredIcon": "#201f1e",
    "ghostHoveredSecondaryContent": "#605e5c",
    "ghostIcon": "#323130",
    "ghostPressedBackground": "#edebe9",
    "ghostPressedBorder": "#edebe9",
    "ghostPressedContent": "#201f1e",
    "ghostPressedIcon": "#201f1e",
    "ghostPressedSecondaryContent": "#605e5c",
    "ghostSecondaryContent": "#605e5c",
    "inputBackground": "#ffffff",
    "inputBorder": "#a19f9d",
    "inputFocusBorderAlt": "#0078d4",
    "inputPlaceholderText": "#605e5c",
    "inputText": "#323130",
    "link": "#0078d4",
    "linkHovered": "#004578",
    "linkPressed": "#005a9e",
    "listHeaderBackgroundHovered": "#f3f2f1",
    "listHeaderBackgroundPressed": "#edebe9",
    "menuBackground": "#ffffff",
    "menuDivider": "#c8c6c4",
    "menuIcon": "#0078d4",
    "menuItemBackgroundHovered": "#f3f2f1",
    "menuItemBackgroundPressed": "#edebe9",
    "menuItemText": "#323130",
    "menuItemTextHovered": "#201f1e",
    "neutralBackground1": "#ffffff",
    "neutralBackground1Hover": "#f5f5f5",
    "neutralBackground1Pressed": "#d6d6d6",
    "neutralBackground1Selected": "#e6e6e6",
    "neutralBackground2": "#ffffff",
    "neutralBackground2Hover": "#f5f5f5",
    "neutralBackground2Pressed": "#d6d6d6",
    "neutralBackground2Selected": "#e6e6e6",
    "neutralBackground3": "#ffffff",
    "neutralBackground3Hover": "#f5f5f5",
    "neutralBackground3Pressed": "#d6d6d6",
    "neutralBackground3Selected": "#e6e6e6",
    "neutralBackground4": "#f5f5f5",
    "neutralBackground4Hover": "#ebebeb",
    "neutralBackground4Pressed": "#cccccc",
    "neutralBackground4Selected": "#dbdbdb",
    "neutralBackground5": "#ebebeb",
    "neutralBackground5Hover": "#e0e0e0",
    "neutralBackground5Pressed": "#c2c2c2",
    "neutralBackground5Selected": "#d1d1d1",
    "neutralBackground6": "#e6e6e6",
    "neutralBackgroundDisabled": "#f0f0f0",
    "neutralBackgroundInverted": "#616161",
    "neutralForeground1": "#242424",
    "neutralForeground1Hover": "#242424",
    "neutralForeground1Pressed": "#242424",
    "neutralForeground1Selected": "#242424",
    "neutralForeground2": "#424242",
    "neutralForeground2BrandHover": "#106ebe",
    "neutralForeground2BrandPressed": "#004578",
    "neutralForeground2BrandSelected": "#005a9e",
    "neutralForeground2Hover": "#242424",
    "neutralForeground2Pressed": "#242424",
    "neutralForeground2Selected": "#242424",
    "neutralForeground3": "#616161",
    "neutralForeground3BrandHover": "#106ebe",
    "neutralForeground3BrandPressed": "#004578",
    "neutralForeground3BrandSelected": "#005a9e",
    "neutralForeground3Hover": "#424242",
    "neutralForeground3Pressed": "#424242",
    "neutralForeground3Selected": "#424242",
    "neutralForeground4": "#707070",
    "neutralForegroundDisabled": "#757575",
    "neutralForegroundInverted": "#ffffff",
    "neutralForegroundInvertedLink": "#ffffff",
    "neutralForegroundInvertedLinkHover": "#ffffff",
    "neutralForegroundInvertedLinkPressed": "#ffffff",
    "neutralForegroundInvertedLinkSelected": "#ffffff",
    "neutralForegroundOnBrand": "#ffffff",
    "neutralForegroundOnBrandHover": "#ffffff",
    "neutralForegroundOnBrandPressed": "#ffffff",
    "neutralForegroundOnBrandSelected": "#ffffff",
    "neutralStencil1": "#e6e6e6",
    "neutralStencil2": "#fafafa",
    "neutralStroke1": "#d1d1d1",
    "neutralStroke1Hover": "#c7c7c7",
    "neutralStroke1Pressed": "#b3b3b3",
    "neutralStroke1Selected": "#bdbdbd",
    "neutralStroke2": "#d6d6d6",
    "neutralStroke3": "#f0f0f0",
    "neutralStrokeAccessible": "#616161",
    "neutralStrokeAccessibleHover": "#575757",
    "neutralStrokeAccessiblePressed": "#4d4d4d",
    "neutralStrokeAccessibleSelected": "#0078d4",
    "neutralStrokeDisabled": "#e0e0e0",
    "outofofficeBackground1": "#fdf5fc",
    "outofofficeBackground2": "#edbbe7",
    "outofofficeBackground3": "#c239b3",
    "outofofficeBorder1": "#edbbe7",
    "outofofficeBorder2": "#c239b3",
    "outofofficeBorderActive": "#c239b3",
    "outofofficeForeground1": "#af33a1",
    "outofofficeForeground2": "#6d2064",
    "outofofficeForeground3": "#c239b3",
    "personaActivityGlow": "#0078d4",
    "personaActivityRing": "#ffffff",
    "primaryButtonBackground": "#0078d4",
    "primaryButtonBackgroundDisabled": "#f3f2f1",
    "primaryButtonBackgroundHovered": "#106ebe",
    "primaryButtonBackgroundPressed": "#005a9e",
    "primaryButtonBorder": "transparent",
    "primaryButtonBorderFocused": "transparent",
    "primaryButtonText": "#ffffff",
    "primaryButtonTextDisabled": "#d2d0ce",
    "primaryButtonTextHovered": "#ffffff",
    "primaryButtonTextPressed": "#ffffff",
    "severeBackground1": "#fdf6f3",
    "severeBackground2": "#f4bfab",
    "severeBackground3": "#da3b01",
    "severeBorder1": "#f4bfab",
    "severeBorder2": "#da3b01",
    "severeBorderActive": "#da3b01",
    "severeForeground1": "#c43501",
    "severeForeground2": "#7a2101",
    "severeForeground3": "#da3b01",
    "strokeFocus1": "#ffffff",
    "strokeFocus2": "#000000",
    "subText": "#605e5c",
    "subtleBackground": "#00000000",
    "subtleBackgroundHover": "#f5f5f5",
    "subtleBackgroundPressed": "#e0e0e0",
    "subtleBackgroundSelected": "#ebebeb",
    "successBackground1": "#f1faf1",
    "successBackground2": "#9fd89f",
    "successBackground3": "#107c10",
    "successBorder1": "#9fd89f",
    "successBorder2": "#107c10",
    "successBorderActive": "#107c10",
    "successForeground1": "#0e700e",
    "successForeground2": "#094509",
    "successForeground3": "#107c10",
    "successForegroundInverted": "#359b35",
    "transparentBackground": "#00000000",
    "transparentBackgroundHover": "#00000000",
    "transparentBackgroundPressed": "#00000000",
    "transparentBackgroundSelected": "#00000000",
    "transparentStroke": "#00000000",
    "transparentStrokeDisabled": "#00000000",
    "transparentStrokeInteractive": "#00000000",
    "variantBorder": "#edebe9",
    "warningBackground1": "#fffef5",
    "warningBackground2": "#fef7b2",
    "warningBackground3": "#fde300",
    "warningBorder1": "#fef7b2",
    "warningBorder2": "#fde300",
    "warningBorderActive": "#fde300",
    "warningForeground1": "#817400",
    "warningForeground2": "#817400",
    "warningForeground3": "#fde300",
    "warningForegroundInverted": "#fef7b2",
  },
  "components": {},
  "host": {
    "appearance": "light",
  },
  "shadows": {
    "shadow16": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000024",
        "x": 0,
        "y": 8,
      },
    },
    "shadow16brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000040",
        "x": 0,
        "y": 8,
      },
    },
    "shadow2": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000024",
        "x": 0,
        "y": 1,
      },
    },
    "shadow28": {
      "ambient": {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#0000003d",
        "x": 0,
        "y": 14,
      },
    },
    "shadow28brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#00000040",
        "x": 0,
        "y": 14,
      },
    },
    "shadow2brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000040",
        "x": 0,
        "y": 1,
      },
    },
    "shadow4": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000024",
        "x": 0,
        "y": 2,
      },
    },
    "shadow4brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000040",
        "x": 0,
        "y": 2,
      },
    },
    "shadow64": {
      "ambient": {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#0000003d",
        "x": 0,
        "y": 32,
      },
    },
    "shadow64brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#00000040",
        "x": 0,
        "y": 32,
      },
    },
    "shadow8": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000024",
        "x": 0,
        "y": 4,
      },
    },
    "shadow8brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000040",
        "x": 0,
        "y": 4,
      },
    },
  },
  "spacing": {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
  "typography": {
    "families": {
      "cursive": "System",
      "monospace": "System",
      "numeric": "System",
      "primary": "System",
      "sansSerif": "System",
      "secondary": "System",
      "serif": "System",
    },
    "sizes": {
      "body": 14,
      "caption": 10,
      "header": 20,
      "hero": 28,
      "heroLarge": 40,
      "secondary": 12,
      "subheader": 16,
    },
    "variants": {
      "body1": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "body1Strong": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "body2": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "body2Strong": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodySemibold": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodyStandard": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "caption1": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "caption1Strong": {
        "face": "primary",
        "size": "caption",
        "weight": "semiBold",
      },
      "captionStandard": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "display": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "headerSemibold": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "headerStandard": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "heroLargeSemibold": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "heroLargeStandard": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "heroSemibold": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
      "heroStandard": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "largeTitle": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "secondarySemibold": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "secondaryStandard": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "subheaderSemibold": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "subheaderStandard": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle1": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "subtitle1Strong": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "subtitle2": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle2Strong": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "title1": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "title1Strong": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
    },
    "weights": {
      "regular": "400",
      "semiBold": "600",
    },
  },
}
`;
